add generic service for Genres